package com.example.notionclone.domain.permission.entity;

public enum PermissionStatus {
    PENDING, ACCEPTED, REJECTED
} 