package com.example.notionclone.domain.permission.entity;

public enum PermissionType {
READ, WRITE, OWNER
} 