classDiagram
direction BT
class BaseEntity {
    String  createdBy
    String  updatedBy
    LocalDateTime  createdAt
    LocalDateTime  updatedAt
}
class Document {
    Long  id
    String  title
    String  content
    Integer  sortOrder
    boolean  isTrashed
    Integer  titleColumnWidth
    ViewType  viewType
    boolean  isLocked
}
class DocumentProperty {
    Long  id
    String  name
    PropertyType  type
    Integer  sortOrder
    Integer  width
}
class DocumentPropertyTagOption {
    Long  id
    String  label
    String  color
    Integer  sortOrder
}
class DocumentPropertyValue {
    Long  id
    String  value
}
class Notification {
    Long  id
    NotificationType  type
    String  message
    String  payload
    NotificationStatus  status
}
class Permission {
    Long  id
    PermissionType  permissionType
    PermissionStatus  status
}
class User {
    Long  id
    String  email
    String  password
    String  name
    String  profileImageUrl
    UserRole  role
    Boolean  isActive
    LocalDateTime  lastLoginAt
}
class Workspace {
    Long  id
    String  name
}
class ViewType {
    <<enumeration>>
    PAGE
    TABLE
    GALLERY
}
class PropertyType {
    <<enumeration>>
    TEXT
    NUMBER
    TAG
    DATE
    CREATED_BY
    LAST_UPDATED_BY
    CREATED_AT
    LAST_UPDATED_AT
}
class PermissionType {
    <<enumeration>>
    READ
    WRITE
    OWNER
}
class PermissionStatus {
    <<enumeration>>
    PENDING
    ACCEPTED
    REJECTED
}
class UserRole {
    <<enumeration>>
    SUPER_ADMIN
    ADMIN
    USER
}
class NotificationType {
    <<enumeration>>
    INVITE
    COMMENT
    MENTION
    SYSTEM
}
class NotificationStatus {
    <<enumeration>>
    UNREAD
    READ
    ACCEPTED
    REJECTED
}

BaseEntity  --|>  Document 
BaseEntity  --|>  DocumentProperty 
BaseEntity  --|>  DocumentPropertyTagOption 
BaseEntity  --|>  DocumentPropertyValue 
BaseEntity  --|>  Notification 
BaseEntity  --|>  Permission 
BaseEntity  --|>  User 
BaseEntity  --|>  Workspace 

Document "0..*" --> "0..1" User 
Document "0..*" <--> "0..1" Workspace 
Document "0..*" --> "0..1" Document 
Document "0..*" --> "0..1" ViewType 
DocumentProperty "0..*" --> "0..1" Document 
DocumentProperty "0..*" --> "0..1" PropertyType 
DocumentPropertyTagOption "0..*" --> "0..1" DocumentProperty 
DocumentPropertyValue "0..*" --> "0..1" Document 
DocumentPropertyValue "0..*" --> "0..1" DocumentProperty 
Notification "0..*" --> "0..1" User 
Notification "0..*" --> "0..1" NotificationType 
Notification "0..*" --> "0..1" NotificationStatus 
Permission "0..*" --> "0..1" Document 
Permission "0..*" --> "0..1" User 
Permission "0..*" --> "0..1" PermissionType 
Permission "0..*" --> "0..1" PermissionStatus 
Workspace "0..*" --> "0..1" User 
Workspace "0..1" <--> "0..*" Workspace 
User "0..*" --> "0..1" UserRole 
